src/main/java/examples/Basic/invalid/BasicSendWithInvalidRecipients.java
package examples.Basic.invalid;

import com.socketLabs.injectionApi.SendResponse;
import examples.Example;

public class BasicSendWithInvalidRecipients implements Example {

    public SendResponse RunExample ()  throws Exception {
        return null;
    }
}
